--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                 <li><a href="https://vishu1524.github.io/Home/">Home</a></li>
                 <li><a href="https://www.freecodecamp.org/news/html-css-and-javascript-explained-for-beginners/" target="_blank">About</a></li>
                 <li> <a href="#">Help</a></li>
-                <li><a href="/contact.html" target="_blank">Contact</a></li>
+                <li><a href="https://vishu1524.github.io/phone/" target="_blank">Contact</a></li>
                 <div class="search">
                     <input type="text" name="search" placeholder="search box">
                 </div>
