--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+  <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,20 +8,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>My first website</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	<style>
 		body {
 			background-color: #e14e4e4d;
 			margin: 20px;
-			/*border: 3px solid black;
-			border-radius: 8px;*/
+			border: 3px solid black;
+			border-radius: 8px;
 			width: 100%vw;
 			height: 100%vh;
+		}
+		.border{
+			border:3px solid black;
 		}
 
 		header {
 			font-family: "Trirong", serif;
 			background-color: #342c7496;
 			border: 3px solid black;
+			margin:5px;
 			border-radius: 8px;
 			padding-top: 3px;
 		}
@@ -32,6 +38,7 @@
 		#navbar {
 			background-color: rgb(232, 164, 164);
 			border: 2px solid black;
+			margin:5px;
 			border-radius: 10px;
 
 
@@ -90,6 +97,8 @@
 
 		#navbar input {
 			border: 2px solid black;
+			margin:5px;
+
 			border-radius: 10px;
 			width: 180px;
 			height: 25px;
@@ -112,6 +121,7 @@
 			margin: auto;
 			width: 90px;
 			padding-right: 30px;
+			
 		}
 
 		.RESULTname {
@@ -136,6 +146,8 @@
 
 			background-color: #ffa726d9;
 			border: 3px solid black;
+			margin:5px;
+
 			border-radius: 8px;
 			padding-bottom: 7px;
 
@@ -157,6 +169,8 @@
 		#insta {
 			background-color: #e51e8cbd;
 			border: 3px solid black;
+			margin:5px;
+
 			border-radius: 8px;
 			padding-bottom: 7px;
 
@@ -165,6 +179,8 @@
 		#whatsapp {
 			background-color: #00802da3;
 			border: 3px solid black;
+			margin:5px;
+
 			border-radius: 8px;
 			padding-bottom: 7px;
 
@@ -174,6 +190,8 @@
 
 			background-color: #e00f13e3;
 			border: 3px solid black;
+			margin:5px;
+
 			border-radius: 8px;
 			padding-bottom: 7px;
 
@@ -182,6 +200,8 @@
 		#google {
 			background-color: #00c5c5c7;
 			border: 3px solid black;
+			margin:5px;
+
 			border-radius: 8px;
 			padding-bottom: 7px;
 
@@ -190,6 +210,8 @@
 		#table {
 			background-color: #e1ed31cf;
 			border: 3px solid black;
+			margin:5px;
+
 			border-radius: 8px;
 			padding-bottom: 7px;
 
@@ -207,6 +229,7 @@
 </head>
 
 <body>
+	<div class="border">
 	<header>
 		<img src="https://media.istockphoto.com/vectors/hand-holding-torch-vector-id165072006" class="weblogo"
 			width="121px" alt="LOGO">
@@ -214,21 +237,21 @@
 		<br>
 
 
-		<div class="image">
-			<img src="https://scontent.fagr1-2.fna.fbcdn.net/v/t39.30808-6/311266973_133647156085431_3290951804261773713_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=174925&_nc_ohc=UBz340RSEvsAX8EzlQt&_nc_ht=scontent.fagr1-2.fna&oh=00_AT_A6IL5Y_ByUi_WoJH7cQJst6Lq6mq7bWbrgfZr8QxO6g&oe=63526FA7"
-				width="121px" alt="image"></a>
+		<div class="image ">
+			<img src="https://scontent.fagr1-3.fna.fbcdn.net/v/t39.30808-6/295621362_113061884810625_7486972948430136011_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=0n7f31KiZ3kAX-TW7pv&_nc_ht=scontent.fagr1-3.fna&oh=00_AfCuQMUpPiB5vNzsBDwoFGj73jhiNopC-jiz720Ui3e_wg&oe=6398D6AE"
+				 width="121px" alt="image"></a>
 		</div>
-		<h4><u>VISHESH YADAV</u></h4>
+		<h4>&nbsp &nbsp &nbsp<u> VISHESH YADAV</u></h4>
 
 
 		<nav id="navbar">
 			<ul>
 
-				<li><a href="htpps://vishu1524.github.io/Home/">Home</a></li>
+				<li><a href="#">Home</a></li>
 				<li><a href="https://www.freecodecamp.org/news/html-css-and-javascript-explained-for-beginners/"
-						>About</a></li>
+						target="_blank">About</a></li>
 				<li> <a href="#">Help</a></li>
-				<li><a href="https://vishu1524.github.io/phone/">Contact</a></li>
+				<li><a href="#">Contact</a></li>
 				<div id="google_translate_element"></div>
 
 				<script type="text/javascript">
@@ -261,13 +284,14 @@
 		<section>
 			<br>
 			<span class="show">
+				&nbsp
 				<u>Please click and go to webistes :-</u>
 				<br>
 
 			</span>
 
 			<br>
-			<b>1.</b>
+			<b>&nbsp1.</b>
 
 			<div id="facebook">
 				<hr style="border:black">
@@ -292,7 +316,7 @@
 
 
 			<br>
-			<b>2.</b>
+			<b>&nbsp2.</b>
 			<div id="insta">
 				<hr style="border:black">
 				<a href="https://www.instagram.com/" target="_main" class="img"><img
@@ -318,7 +342,7 @@
 			</div>
 
 			<br>
-			<b>3.</b>
+			<b>&nbsp3.</b>
 			<div id="whatsapp">
 				<hr style="border:black">
 				<a href="https://web.whatsapp.com/" target="_main" class="img"><img
@@ -347,7 +371,7 @@
 			</div>
 
 			<br>
-			<b>4.</b>
+			<b>&nbsp4.</b>
 			<div id="youtube">
 				<hr style="border:black">
 				<a href="https://www.youtube.com" target="_main" class="img"><img
@@ -371,7 +395,7 @@
 			</div>
 
 			<br>
-			<b>5.</b>
+			<b>&nbsp5.</b>
 			<div id="google">
 				<hr style="border:black">
 				<a href="https://www.google.co.in" target="_main" class="img"><img
@@ -406,10 +430,10 @@
 
 			</div>
 			<br>
-			<b>6.</b>
+			<b>&nbsp6.</b>
 			<div id="table">
 				<hr style="border:black">
-				<a href="https://vishu1524.github.io/Result/" target="_main" class="img"><img
+				<a href="/table.html" target="_main" class="img"><img
 						src="https://bteup.ac.in/InstituteContent/999/Content/images/leftLogo.jpg" width="121px"
 						alt="bteup-result"></a>
 				<div class="RESULTname">
@@ -438,12 +462,14 @@
 					</p>
 				</div>
 			</div>
+		</div>
 
 
 
 
 		</section>
 	</main>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 
 </html>
