--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,25 +7,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>My first website</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Trirong">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 	<style>
 		body {
 			background-color: #e14e4e4d;
 			margin: 20px;
-			border: 3px solid black;
-			border-radius: 8px;
+			/*border: 3px solid black;
+			border-radius: 8px;*/
 			width: 100%vw;
 			height: 100%vh;
-		}
-		.border{
-			border:3px solid black;
 		}
 
 		header {
 			font-family: "Trirong", serif;
 			background-color: #342c7496;
 			border: 3px solid black;
-			margin:5px;
 			border-radius: 8px;
 			padding-top: 3px;
 		}
@@ -38,7 +32,6 @@
 		#navbar {
 			background-color: rgb(232, 164, 164);
 			border: 2px solid black;
-			margin:5px;
 			border-radius: 10px;
 
 
@@ -97,8 +90,6 @@
 
 		#navbar input {
 			border: 2px solid black;
-			margin:5px;
-
 			border-radius: 10px;
 			width: 180px;
 			height: 25px;
@@ -121,7 +112,6 @@
 			margin: auto;
 			width: 90px;
 			padding-right: 30px;
-			
 		}
 
 		.RESULTname {
@@ -146,8 +136,6 @@
 
 			background-color: #ffa726d9;
 			border: 3px solid black;
-			margin:5px;
-
 			border-radius: 8px;
 			padding-bottom: 7px;
 
@@ -169,8 +157,6 @@
 		#insta {
 			background-color: #e51e8cbd;
 			border: 3px solid black;
-			margin:5px;
-
 			border-radius: 8px;
 			padding-bottom: 7px;
 
@@ -179,8 +165,6 @@
 		#whatsapp {
 			background-color: #00802da3;
 			border: 3px solid black;
-			margin:5px;
-
 			border-radius: 8px;
 			padding-bottom: 7px;
 
@@ -190,8 +174,6 @@
 
 			background-color: #e00f13e3;
 			border: 3px solid black;
-			margin:5px;
-
 			border-radius: 8px;
 			padding-bottom: 7px;
 
@@ -200,8 +182,6 @@
 		#google {
 			background-color: #00c5c5c7;
 			border: 3px solid black;
-			margin:5px;
-
 			border-radius: 8px;
 			padding-bottom: 7px;
 
@@ -210,8 +190,6 @@
 		#table {
 			background-color: #e1ed31cf;
 			border: 3px solid black;
-			margin:5px;
-
 			border-radius: 8px;
 			padding-bottom: 7px;
 
@@ -229,7 +207,6 @@
 </head>
 
 <body>
-	<div class="border">
 	<header>
 		<img src="https://media.istockphoto.com/vectors/hand-holding-torch-vector-id165072006" class="weblogo"
 			width="121px" alt="LOGO">
@@ -237,11 +214,11 @@
 		<br>
 
 
-		<div class="image ">
-			<img src="https://scontent.fagr1-3.fna.fbcdn.net/v/t39.30808-6/295621362_113061884810625_7486972948430136011_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=0n7f31KiZ3kAX-TW7pv&_nc_ht=scontent.fagr1-3.fna&oh=00_AfCuQMUpPiB5vNzsBDwoFGj73jhiNopC-jiz720Ui3e_wg&oe=6398D6AE"
-				 width="121px" alt="image"></a>
+		<div class="image">
+			<img src="https://scontent.fagr1-3.fna.fbcdn.net/v/t39.30808-6/295621362_113061884810625_7486972948430136011_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=R_qXr4OCuO4AX9FH19b&_nc_ht=scontent.fagr1-3.fna&oh=00_AfCNVt-vaA3jJ4ePZevo_5UnETVJo8-Fe8Lr4MB9osixng&oe=639CCB2E"
+				width="121px" alt="image"></a>
 		</div>
-		<h4>&nbsp &nbsp &nbsp<u> VISHESH YADAV</u></h4>
+		<h4><u>VISHESH YADAV</u></h4>
 
 
 		<nav id="navbar">
@@ -284,14 +261,13 @@
 		<section>
 			<br>
 			<span class="show">
-				&nbsp
 				<u>Please click and go to webistes :-</u>
 				<br>
 
 			</span>
 
 			<br>
-			<b>&nbsp1.</b>
+			<b>1.</b>
 
 			<div id="facebook">
 				<hr style="border:black">
@@ -316,7 +292,7 @@
 
 
 			<br>
-			<b>&nbsp2.</b>
+			<b>2.</b>
 			<div id="insta">
 				<hr style="border:black">
 				<a href="https://www.instagram.com/" target="_main" class="img"><img
@@ -342,7 +318,7 @@
 			</div>
 
 			<br>
-			<b>&nbsp3.</b>
+			<b>3.</b>
 			<div id="whatsapp">
 				<hr style="border:black">
 				<a href="https://web.whatsapp.com/" target="_main" class="img"><img
@@ -371,7 +347,7 @@
 			</div>
 
 			<br>
-			<b>&nbsp4.</b>
+			<b>4.</b>
 			<div id="youtube">
 				<hr style="border:black">
 				<a href="https://www.youtube.com" target="_main" class="img"><img
@@ -395,7 +371,7 @@
 			</div>
 
 			<br>
-			<b>&nbsp5.</b>
+			<b>5.</b>
 			<div id="google">
 				<hr style="border:black">
 				<a href="https://www.google.co.in" target="_main" class="img"><img
@@ -430,7 +406,7 @@
 
 			</div>
 			<br>
-			<b>&nbsp6.</b>
+			<b>6.</b>
 			<div id="table">
 				<hr style="border:black">
 				<a href="/table.html" target="_main" class="img"><img
@@ -462,14 +438,12 @@
 					</p>
 				</div>
 			</div>
-		</div>
 
 
 
 
 		</section>
 	</main>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 
 </html>
