--- a/index.html
+++ b/index.html
@@ -224,11 +224,11 @@
 		<nav id="navbar">
 			<ul>
 
-				<li><a href="#">Home</a></li>
+				<li><a href="https://vishu1524.github.io/Home">Home</a></li>
 				<li><a href="https://www.freecodecamp.org/news/html-css-and-javascript-explained-for-beginners/"
 						target="_blank">About</a></li>
 				<li> <a href="#">Help</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="https://vishu1524.github.io/phone">Contact</a></li>
 				<div id="google_translate_element"></div>
 
 				<script type="text/javascript">
@@ -409,7 +409,7 @@
 			<b>6.</b>
 			<div id="table">
 				<hr style="border:black">
-				<a href="/table.html" target="_main" class="img"><img
+				<a href="https://vishu1524.github.io/Result" target="_main" class="img"><img
 						src="https://bteup.ac.in/InstituteContent/999/Content/images/leftLogo.jpg" width="121px"
 						alt="bteup-result"></a>
 				<div class="RESULTname">
@@ -447,3 +447,44 @@
 </body>
 
 </html>
+			<div id="table">
+				<hr style="border:black">
+				<a href="https://vishu1524.github.io/Result" target="_main" class="img"><img
+						src="https://bteup.ac.in/InstituteContent/999/Content/images/leftLogo.jpg" width="121px"
+						alt="bteup-result"></a>
+				<div class="RESULTname">
+					<b><u>B.T.E.U.P &nbsp RESULT</u></b>
+				</div>
+				<div class="text">
+					State Board Of Technical Education and Training" was set up in the state in May,1958. The Board
+					conducted its first examination in 1960,for courses of diploma level and also for Draughtsman
+					Certificate Course. The name of the state Board was changed to "Board Of Technical Education" in
+					1962.In the same Year, the "U.P. Pravidhic Shiksha Adhiniyam - 1962" was enacted awarding the
+					Board statutory status. In the year 1962, year of its inception, the Board held the examination
+					of about 2500 students, in three major disciplines of Civil, Electrical and Mechanical
+					Engineering at 25 different Centers/Institutions. It has a chairman , vice-chairman and 40
+					members ,named by the state government .Secretary ,Board of Technical Education ,U.P. is
+					ex-officio member secretary of the Board. The curriculum prepared by other institutions was
+					adopted by the Board, till 1980 but thereafter the curriculum and syllabi were developed and
+					revised, every five years at the Board level through its Curriculum development centre. The
+					curriculum development work has been entrusted to I.R.D.T. kanpur . The Board now examine and
+					approve the syllabus developed by IRDT, Kanpur and prescribe it for institutions affiliated to
+					Board of Technical Education, U.P. About 250,000 students in the following 60 different
+					disciplines of one year, two year, three year and four year durations are being examined at
+					present, in the institutions, affiliated to the Board. The Board of has been constituted under
+					"U.P. Pravidhic Shiksha Adhiniyam - 1962". It has a Chairman and a Vice-Chairman and 40 memebers
+					nominated by the state Government. Secretary ,Board Of Technical Education is ex-officio member
+					secretary of the Board .
+					</p>
+				</div>
+			</div>
+
+
+
+
+		</section>
+	</main>
+</body>
+
+</html>
+
